<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reportsmobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">تایید</string>
    <string name="cancel">لغو</string>
    <string name="errorTitle">خطا</string>
    <string name="warningTitle">توجه</string>
    <string name="LoginErrorMessageGeneric">Generic Message</string>
    <string name="HttpStatusMessageBadRequest">400   آدرس در خواستی به سرور معتبر نمی باشد</string>
    <string name="HttpStatusMessageUnauthorized">401 دسترسی غیر مجاز،  آدرس در خواست شده نیاز به ارائه نام کاربری و کلمه عبور میباشد</string>
    <string name="HttpStatusMessageForbidden">403 اجازه دسترسی به محتوای در خواست وجود ندارد. </string>
    <string name="HttpStatusMessageNotFound">هم‌اكنون آدرس مورد نظر یافت نمی‌شود  404 </string>
    <string name="HttpStatusMessageProxyAuthenticationRequired">407 نیاز به مجوز پروکسی </string>
    <string name="HttpStatusMessageRequestTimeout">زمان سرور برای انتظار درخواست كاربر تمام شده است  408 </string>
    <string name="HttpStatusMessageInternalServerError">500 سرور با یك خطای داخلی روبه‌رو شده است</string>
    <string name="HttpStatusMessageNotImplemented">501</string>
    <string name="HttpStatusMessageBadGateway">502 سرور با یك درخواست نا‌معتبر از سرور بالا‌دستی مواجه شده است</string>
    <string name="HttpStatusMessageServiceUnavailable">503 سرویس درخواستی شما موجود نیست</string>
    <string name="HttpStatusMessageGatewayTimeout">504 پاسخ مناسبی از  سرور  دریافت نشد</string>

	<string name="reportIsLoading">گزارش در حال بارگزاری می باشد</string>
	<string name="pleaseWait">لطفا منتظر باشید</string>
	<string name="pleaseEnterUsername">لطفا نام کاربری را وارد نمایید</string>
	<string name="pleaseEnterPassword">لطفا رمز عبور را وارد نمایید</string>
	<string name="pleaseSelectDomain">لطفا دامنه را انتخاب نمایید </string>
	<string name="pleaseEnterDomainFirst">ابتدا دامنه را وارد نمایید</string>
	<string name="pleaseselectDomainFirst">لطفا ابتدا  دامنه  و سپس سال مالی را  انتخاب نمایید</string>
	<string name="dataRxErrorMsg">خطا در دریافت اطلاعات از سرور. لطفا مجددا تلاش نمایید.</string>
	<string name="wouldYouLikeToExit">آیا می خواهید از برنامه خارج شوید؟</string>
    
    <string-array name="tafsiltitle">
        <item>عنوان تفصیل</item>
        <item>ارز</item>
        <item>مرکز هزینه</item>
        <item>مرکز پروژه</item>
    </string-array>
    <string-array name="customer_array">
        <item>رضایی محمد</item>
        <item>راد سینا</item>
        <item>محمدی سروش</item>
        <item>عنوان تفصیل</item>
        <item>ارز</item>
        <item>مرکز هزینه</item>
        <item>مرکز پروژه</item>
        <item>عنوان تفصیل</item>
        <item>ارز</item>
        <item>مرکز هزینه</item>
        <item>مرکز پروژه</item>
        <item>عنوان تفصیل</item>
        <item>ارز</item>
        <item>مرکز هزینه</item>
        <item>مرکز پروژه</item>
    </string-array>

    <string name="DatePickerYear">سال</string>
    <string name="DatePickerMonth">ماه</string>
    <string name="DatePickerDay">روز</string>
    
    <string name="VaziatMoshtarian">وضعیت مشتریان</string>
    <string name="Amalkardmoshtarian">عملکرد مشتریان به تفکیک فاکتور</string>
    <string name="kalavakhadamat">کالاوخدمات     فروخته شده</string>
    <string name="gozarehforosh">گزارش فروش</string>
    <!--====================  -->
    <string name="GozarehhHesabdari">گزارش حسابداری</string>
    <string name="Gozarehhtafsili">گزارش گردش تفصیلی</string>
    <string name="Gozarehdotahtafsili">گردش ترکیبی دوتا تفصیلی</string>
    <string name="Gozarehkalaanbar">گزارش موجودی کالا و انبار</string>
    <string name="GozarehMojodiKala">موجودی کالا</string>
    <string name="rialianbar">ریالی انبار</string>
    <!--====================  -->
    <string name="gozareshKhazane">گزارش خزانه داری</string>
    <string name="asnaddaryafti">اسناد دریافتی</string>
    <string name="vaziatasnaddaryafti">وضعیت اسناد دریافتی</string>
    <string name="asnadpardakhti">اسناد پرداختی</string>
     <string name="vaziatasnadpardakhti">وضعیت اسناد پرداختی</string>
      <!--====================  -->
       <string name="entekhab">لطفا یکی از گزینه های زیر را انتخاب نمایید</string>
       <string name="jostojo">جستجو</string>
       
       <string name="namkarbari">نام کاربری</string>
       <string name="ramz">رمز عبور</string>
       <string name="domain">دامنه</string>
       
       <string name="salmali">سال مالی</string>
        <string name="fromdate">از تاریخ</string>
       <string name="todate">تا تاریخ</string>
        <string name="moshtari">مشتری</string>
        <string name="bazaryab">بازاریاب</string>
        <string name="foroshande">فروشنده</string>
         <string name="kala">کالا</string>
          <string name="khadamat">خدمات</string>
          
           <string name="anbarha">انبارها</string>
           <string name="kalaha">کالاها</string>
         <string name="mojodisefr">عدم نمایش کالاهای موجودی صفر</string>
         
         <string name="tajmie">نمایش بصورت تجمیعی</string>
                     
          <string name="date">تاریخ</string>
           <string name="pardakhtebteda">تاریخ پرداخت ابتدا</string>
           <string name="pardakhtenteha">تاریخ پرداخت انتها</string>
          <string name="sarresidebteda">تاریخ سررسید ابتدا</string>
          <string name="sarresidenteha">تاریخ سررسید انتها</string>
            <string name="shakhspardakhtkonande">شخص پرداخت کننده</string>
            <string name="shakhsgirande">شخص گیرنده</string>
            
             <string name="onvanetafsil">عنوان</string>
             
             <string name="datepicker_startdate">تاریخ شروع</string>
              <string name="datepicker_enddate">تاریخ پایان</string>
              

</resources>