<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_date_mojodi_kala"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_action_date" />

        <TextView
            android:id="@+id/et_date_mojodi_kala"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/todate"
            android:textSize="14sp" >

            <requestFocus />
        </TextView>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:gravity="right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="14sp" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_anbar_mojodi_kala"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/down" />

            <TextView
                android:id="@+id/et_anbar_mojodi_kala"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/anbarha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_shakhsgardesh_hesabdari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_kala_mojodi_kala"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/down" />

            <TextView
                android:id="@+id/et_kala_mojodi_kala"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/kalaha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sathtafsilgardesh_hesabdari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:gravity="right"
         android:orientation="vertical" >

            <CheckBox
                android:id="@+id/chk_mojodisefr_mojodikala"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:background="@color/marker_color"
                android:gravity="right|center"
                android:text="@string/mojodisefr"
                android:textColor="@color/first_row_text_color"
                android:textSize="13sp" />

            <CheckBox
                android:id="@+id/chk_tajmiey_mojodikala"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/marker_color"
                android:gravity="right|center"
                android:text="@string/tajmie"
                android:textColor="@color/first_row_text_color"
                android:textSize="13sp" />

        </LinearLayout>

<ImageButton
    android:id="@+id/imgbtn_namayesh_mojodi_kalaanbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blue_green"
    android:src="@drawable/newnamayesh" />

    </LinearLayout>