<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_fromdate_faktor_frosh"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_action_date" />

        <TextView
            android:id="@+id/et_fromdate_faktor"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/fromdate"
            android:textSize="14sp" >

            <requestFocus />
        </TextView>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_todate_faktor_forosh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ic_action_date" />

            <TextView
                android:id="@+id/et_todate_faktor_forosh"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/todate"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_customer_faktor_forosh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/down" />

            <TextView
                android:id="@+id/et_customer_faktor_forosh"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/moshtari"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv__customer_forosh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_bazaryab_faktor_forosh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/down" />

            <TextView
                android:id="@+id/et_bazarya_faktor_forosh"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/bazaryab"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv__bazarya_forosh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/marker_color"
            android:gravity="right" >

            <ImageButton
                android:id="@+id/imgbtn_foroshande_faktor_forosh"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/down" />

            <TextView
                android:id="@+id/et_foroshande_faktor_forosh"
                android:layout_width="180dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/foroshande"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv__foroshande_forosh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:gravity="right"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="14sp" />

        </LinearLayout>

<ImageButton
    android:id="@+id/imgbtn_namayesh__faktor_forosh"
    android:layout_width="wrap_content"
    android:layout_height="40dp"
    android:background="#83e2e2"
    android:src="@drawable/btnshow_click" />

    </LinearLayout>