<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_fromdate_tarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_action_date" />

        <TextView
            android:id="@+id/et_fromdate_tarkibi_hesabdari"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/fromdate"
            android:textSize="14sp" >

            <requestFocus />
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_todatetarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_action_date" />

        <TextView
            android:id="@+id/et_todate_tarkibi_hesabdari"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/todate"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_sathtafsiltarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down" />

        <Spinner
            android:id="@+id/spnr_sathtafsiltarkibi_hesabdari"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:background="@color/marker_color"
            android:backgroundTint="@color/bg_action_gray"
            android:gravity="center|right"
            android:textColor="#FF0000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sathtafsiltarkibi_hesabdari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:gravity="right"
            android:hint="سطح یک"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/marker_color" >

        <ImageButton
            android:id="@+id/imgbtn_tafsiltarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down" />

        <TextView
            android:id="@+id/et_sathtafsiltarkibi_hesabdari"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/onvanetafsil"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/imgbtn_onvantafsil_tarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spnrOnvan2ta"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@color/marker_color"
            android:backgroundTint="@color/bg_action_gray"
            android:gravity="center"
            android:textColor="#FF0000"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/marker_color"
        android:gravity="right" >

        <ImageButton
            android:id="@+id/imgbtn_sathtafsil2tarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down" />

        <Spinner
            android:id="@+id/spnr_sathtafsil2tarkibi_hesabdari"
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:layout_gravity="center|right"
            android:background="@color/marker_color"
            android:backgroundTint="@color/bg_action_gray"
            android:gravity="center|right"
            android:textColor="#FF0000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sathtafsiltarkibi2_hesabdari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:gravity="right"
            android:hint="سطح دو"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/marker_color" >

        <ImageButton
            android:id="@+id/imgbtn_tafsil2_tarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down" />

        <TextView
            android:id="@+id/et_sathtafsil2tarkibi_hesabdari"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/onvanetafsil"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/imgbtn_onvantafsil2_tarkibi_hesabdari"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@drawable/down"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/spnrOnvan2tae2"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@color/marker_color"
            android:backgroundTint="@color/bg_action_gray"
            android:gravity="center"
            android:textColor="#FF0000"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imgbtn_namayesh_tarkibi_hesabdari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/blue_green"
        android:src="@drawable/btnshow_click" />

    <EditText
        android:id="@+id/editText1ss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:visibility="gone" />

</LinearLayout>